# waifu_gallery

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json.example  LICENSE.txt  README.md  ThirdPartyLicenses.txt  vcpkg.json
licenses/: SQLite-Public-Domain.txt
res/: icons.qrc  licenses.qrc
src/: TEST_waifu_gallery.cpp  main.cpp  test.cpp
src/gui/: about_dialog.cpp  about_dialog.h  image_cache.cpp  image_cache.h  image_loader.cpp  image_loader.h  main_window.cpp  main_window.h  picture_frame.cpp  picture_frame.h  settings_dialog.cpp  settings_dialog.h  thread_pool.cpp  thread_pool.h  worker.cpp  worker.h
src/gui/controllers/: context_controller.h  display_controller.cpp  display_controller.h  image_cache.cpp  image_cache.h  image_loader.cpp  image_loader.h  picture_frame_pool.h  task_controller.h  utils.h  worker.cpp  worker.h
src/gui/widgets/: clickable_label.cpp  clickable_label.h  image_label.h  image_previewer.h  picture_frame.cpp  picture_frame.h
src/service/: database.cpp  database.h  importer.cpp  importer.h  model.cpp  model.h  parser.cpp  parser.h  tagger.cpp  tagger.h
src/ui/: about.ui  about_dialog.ui  main_window.ui  picture_frame.ui  settings_dialog.ui
src/utils/: autotagger_loader.h  logger.cpp  logger.h  parser.h  settings.cpp  settings.h  utils.cpp  utils.h  version.h
